# molformer4molalkit

./: CLAUDE.md  README.md  pyproject.toml
molformer/: args.py  data.py  evaluator.py  molformer.py  run.py  tokenizer.py
molformer/checkpoints/: __init__.py
test/: test_evaluator.py  test_run.py  test_run_integration.py
